VG-ALGORITHM2-2 - Add SQL support