@@ -3,9 +3,8 @@ package pl.ddconstruction.vectorgradebook.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import pl.ddconstruction.vectorgradebook.model.Class;
 import pl.ddconstruction.vectorgradebook.model.CourseConfig;
-import pl.ddconstruction.vectorgradebook.model.Student;
+import pl.ddconstruction.vectorgradebook.model.entity.Student;
 import pl.ddconstruction.vectorgradebook.ui.TeamGeneratorView;
 
 import java.util.*;
@@ -17,24 +16,23 @@ public class TeamFormationService {
 
     private final CourseService courseService;
 
-    public List<TeamGeneratorView.Team> generateTeams(List<Student> students, boolean preferTrios) {
+    public List<TeamGeneratorView.Team> generateTeams(List<Student> students, boolean preferTrios, UUID courseId) {
         if (students.isEmpty())
             return Collections.emptyList();
 
-        CourseConfig config = courseService.getCurrentConfig();
+        CourseConfig config = courseService.getCourseConfig(courseId);
         if (config == null)
             return Collections.emptyList();
 
         // 1. Prepare Data
         // Skills are now the dimensions
         List<String> sortedSkills = new ArrayList<>(config.getAvailableSkills());
-        int skillCount = sortedSkills.size();
+        log.debug("Skills count: {}", sortedSkills.size());
 
         // Pre-calculate vectors for all students
         // Map<StudentID, float[]>
         Map<UUID, double[]> studentVectors = new HashMap<>();
-        Map<Integer, Student> indexMap = new HashMap<>(); // For testing if needed, or debugging
-        
+
         for (Student s : students) {
             studentVectors.put(s.getId(), calculateStudentVector(s, sortedSkills, config));
         }
@@ -59,21 +57,22 @@ public class TeamFormationService {
                 List<Student> teamMembers = new ArrayList<>();
                 teamMembers.add(student);
                 teamMembers.add(partner);
-                
+
                 double[] currentTeamVec = calculateMaxVector(vecA, studentVectors.get(partner.getId()));
-                
+
                 // If preferTrios, try to find a 3rd
                 if (preferTrios) {
-                     Student third = findThirdPartner(teamMembers, currentTeamVec, sortedStudents, assigned, studentVectors);
-                     if (third != null) {
+                    Student third = findThirdPartner(teamMembers, currentTeamVec, sortedStudents, assigned,
+                            studentVectors);
+                    if (third != null) {
                         teamMembers.add(third);
                         assigned.add(third.getId());
-                     }
+                    }
                 }
 
                 assigned.add(student.getId());
                 assigned.add(partner.getId());
-                
+
                 double score = calculateSynergy(teamMembers, studentVectors);
                 teams.add(new TeamGeneratorView.Team(teamMembers, score));
             } else {
@@ -83,30 +82,31 @@ public class TeamFormationService {
             }
         }
 
-        // Handle leftovers (merge into pairs if preferTrios was false originally or couldn't find 3rd)
+        // Handle leftovers (merge into pairs if preferTrios was false originally or
+        // couldn't find 3rd)
         // Or if simple pair finding left someone out.
         // Current logic skips if no partner found.
         List<Student> leftovers = students.stream().filter(s -> !assigned.contains(s.getId())).toList();
         for (Student left : leftovers) {
-             // Try to add to existing team (max 3)
-             boolean added = false;
-             for (TeamGeneratorView.Team team : teams) {
-                 if (team.getMembers().size() < 3) {
-                     // Check if synergy improves or at least stays > 3?
-                     // Just add to first available for now to ensure coverage
-                     team.getMembers().add(left);
-                     // Recalculate score
-                     team.setScore(calculateSynergy(team.getMembers(), studentVectors));
-                     assigned.add(left.getId());
-                     added = true;
-                     break;
-                 }
-             }
-             if (!added) {
-                 // Create singleton team
-                 teams.add(new TeamGeneratorView.Team(new ArrayList<>(List.of(left)), 
+            // Try to add to existing team (max 3)
+            boolean added = false;
+            for (TeamGeneratorView.Team team : teams) {
+                if (team.getMembers().size() < 3) {
+                    // Check if synergy improves or at least stays > 3?
+                    // Just add to first available for now to ensure coverage
+                    team.getMembers().add(left);
+                    // Recalculate score
+                    team.setScore(calculateSynergy(team.getMembers(), studentVectors));
+                    assigned.add(left.getId());
+                    added = true;
+                    break;
+                }
+            }
+            if (!added) {
+                // Create singleton team
+                teams.add(new TeamGeneratorView.Team(new ArrayList<>(List.of(left)),
                         calculateAverage(left, studentVectors.get(left.getId()))));
-             }
+            }
         }
 
         // 3. Sort by score descending
@@ -115,14 +115,15 @@ public class TeamFormationService {
         return teams;
     }
 
-    private Student findBestPartner(Student candidate, double[] vecA, List<Student> pool, Set<UUID> assigned, Map<UUID, double[]> vectors) {
+    private Student findBestPartner(Student candidate, double[] vecA, List<Student> pool, Set<UUID> assigned,
+            Map<UUID, double[]> vectors) {
         Student bestPartner = null;
         double bestSynergy = -1.0;
 
         // Gap vector: We want someone who is strong where A is weak.
         // But the metric is Synergy = Mean(Max(A, B)).
         // We simply maximize Synergy.
-        
+
         for (Student other : pool) {
             if (other.getId().equals(candidate.getId()) || assigned.contains(other.getId()))
                 continue;
@@ -132,9 +133,10 @@ public class TeamFormationService {
 
             // Constraint: Avoid score below 3.0
             if (synergy < 3.0) {
-                 // If we have no better option, we might have to take it?
-                 // Let's implement soft preference: only pick < 3.0 if no choice.
-                 // Actually, bestSynergy starts at -1. So if all are < 3.0, we pick the highest < 3.0.
+                // If we have no better option, we might have to take it?
+                // Let's implement soft preference: only pick < 3.0 if no choice.
+                // Actually, bestSynergy starts at -1. So if all are < 3.0, we pick the highest
+                // < 3.0.
             }
 
             if (synergy > bestSynergy) {
@@ -145,7 +147,8 @@ public class TeamFormationService {
         return bestPartner;
     }
 
-    private Student findThirdPartner(List<Student> team, double[] teamVec, List<Student> pool, Set<UUID> assigned, Map<UUID, double[]> vectors) {
+    private Student findThirdPartner(List<Student> team, double[] teamVec, List<Student> pool, Set<UUID> assigned,
+            Map<UUID, double[]> vectors) {
         Student bestThird = null;
         double bestNewSynergy = -1.0;
         double currentSynergy = calculateMean(teamVec);
@@ -161,10 +164,10 @@ public class TeamFormationService {
             // We want to improve synergy or at least keep it high?
             // "avoid score below 3".
             if (newSynergy > currentSynergy || newSynergy > 3.0) {
-                 if (newSynergy > bestNewSynergy) {
-                     bestNewSynergy = newSynergy;
-                     bestThird = other;
-                 }
+                if (newSynergy > bestNewSynergy) {
+                    bestNewSynergy = newSynergy;
+                    bestThird = other;
+                }
             }
         }
         return bestThird;
@@ -182,8 +185,8 @@ public class TeamFormationService {
     private double calculateStudentSkillAverage(Student student, String skill, CourseConfig config) {
         List<Double> grades = new ArrayList<>();
         config.getClasses().forEach(cls -> {
-            if (cls.getSkills().contains(skill)) { // Changed from getTags
-                Double g = student.getClassGrades().get(cls.getId());
+            if (cls.skills().stream().anyMatch(s -> s.name().equals(skill))) { // Changed from getTags
+                Double g = student.getClassGrades().get(cls.id());
                 if (g != null)
                     grades.add(g);
             }
@@ -192,16 +195,17 @@ public class TeamFormationService {
     }
 
     private double calculateSynergy(List<Student> members, Map<UUID, double[]> vectors) {
-        if (members.isEmpty()) return 0.0;
-        double[] maxVec = vectors.get(members.get(0).getId()).clone();
-        
+        if (members.isEmpty())
+            return 0.0;
+        double[] maxVec = vectors.get(members.getFirst().getId()).clone();
+
         for (int i = 1; i < members.size(); i++) {
             double[] vec = vectors.get(members.get(i).getId());
             for (int j = 0; j < maxVec.length; j++) {
                 maxVec[j] = Math.max(maxVec[j], vec[j]);
             }
         }
-        
+
         return calculateMean(maxVec);
     }
 
@@ -212,7 +216,7 @@ public class TeamFormationService {
         }
         return v1.length == 0 ? 0 : sum / v1.length;
     }
-    
+
     private double[] calculateMaxVector(double[] v1, double[] v2) {
         double[] max = new double[v1.length];
         for (int i = 0; i < v1.length; i++) {
@@ -222,17 +226,21 @@ public class TeamFormationService {
     }
 
     private double calculateAverage(Student s, double[] vector) {
-         if (vector.length == 0) return 3.0; // Default average
-         double sum = 0;
-         for (double v : vector) sum += v;
-         return sum / vector.length;
+        if (vector.length == 0)
+            return 3.0; // Default average
+        double sum = 0;
+        for (double v : vector)
+            sum += v;
+        return sum / vector.length;
     }
-    
+
     // Mean of vector components
     private double calculateMean(double[] vector) {
-        if (vector.length == 0) return 0;
+        if (vector.length == 0)
+            return 0;
         double sum = 0;
-        for (double v : vector) sum += v;
+        for (double v : vector)
+            sum += v;
         return sum / vector.length;
     }
 }
